Group17RobotReal/Group17Robot.cydsn/BUILD.log
--------------- Build Started: 10/09/2019 14:13:33 Project: Group17Robot, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
In file included from main.c:23:0:
ultrasonic.h:18:0: warning: "BLOCK_WEST_EDGE" redefined
 #define BLOCK_WEST_EDGE 0
 ^
In file included from main.c:21:0:
main.h:67:0: note: this is the location of the previous definition
 #define BLOCK_WEST_EDGE (ARENA_WIDTH - BLOCK_LENGTH) / 2
 ^
In file included from main.c:23:0:
ultrasonic.h:19:0: warning: "BLOCK_EAST_EDGE" redefined
 #define BLOCK_EAST_EDGE 1
 ^
In file included from main.c:21:0:
main.h:68:0: note: this is the location of the previous definition
 #define BLOCK_EAST_EDGE (BLOCK_WEST_EDGE + BLOCK_LENGTH)
 ^
In file included from main.c:23:0:
ultrasonic.h:20:0: warning: "BLOCK_NORTH_EDGE" redefined
 #define BLOCK_NORTH_EDGE 2
 ^
In file included from main.c:21:0:
main.h:69:0: note: this is the location of the previous definition
 #define BLOCK_NORTH_EDGE (BLOCK_SOUTH_EDGE + BLOCK_LENGTH)
 ^
In file included from main.c:23:0:
ultrasonic.h:21:0: warning: "BLOCK_SOUTH_EDGE" redefined
 #define BLOCK_SOUTH_EDGE 3
 ^
In file included from main.c:21:0:
main.h:70:0: note: this is the location of the previous definition
 #define BLOCK_SOUTH_EDGE (ARENA_LENGTH - BLOCK_LENGTH) / 2
 ^
main.c: In function 'main':
main.c:148:9: warning: unused variable 'tmp' [-Wunused-variable]
     int tmp = 0;
         ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/colour.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c colour.c -o .\CortexM3\ARM_GCC_541\Debug\colour.o
colour.c: In function 'ColourSensingCalibrationRGB2':
colour.c:616:19: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
         stored[i] = ADC_Read32();
                   ^
colour.c:614:5: note: containing loop
     for(int i = 0; i < 10; i++)
     ^
colour.c:602:19: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
         stored[i] = ADC_Read32();
                   ^
colour.c:600:5: note: containing loop
     for(int i = 0; i < 10; i++)
     ^
colour.c:588:19: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
         stored[i] = ADC_Read32();
                   ^
colour.c:586:5: note: containing loop
     for(int i = 0; i < 10; i++)
     ^
colour.c:575:23: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
             stored[i] = ADC_Read32();
                       ^
colour.c:573:9: note: containing loop
         for(int i = 0; i < 10; i++)
         ^
colour.c: In function 'ColourSensingCalibrationRGB1':
colour.c:534:19: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
         stored[i] = ADC_Read32();
                   ^
colour.c:532:5: note: containing loop
     for(int i = 0; i < 10; i++)
     ^
colour.c:520:19: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
         stored[i] = ADC_Read32();
                   ^
colour.c:518:5: note: containing loop
     for(int i = 0; i < 10; i++)
     ^
colour.c:506:19: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
         stored[i] = ADC_Read32();
                   ^
colour.c:504:5: note: containing loop
     for(int i = 0; i < 10; i++)
     ^
colour.c:493:23: warning: iteration 9u invokes undefined behavior [-Waggressive-loop-optimizations]
             stored[i] = ADC_Read32();
                       ^
colour.c:491:9: note: containing loop
         for(int i = 0; i < 10; i++)
         ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/ultrasonic.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c ultrasonic.c -o .\CortexM3\ARM_GCC_541\Debug\ultrasonic.o
In file included from ultrasonic.c:15:0:
ultrasonic.h:18:0: warning: "BLOCK_WEST_EDGE" redefined
 #define BLOCK_WEST_EDGE 0
 ^
In file included from ultrasonic.c:14:0:
main.h:67:0: note: this is the location of the previous definition
 #define BLOCK_WEST_EDGE (ARENA_WIDTH - BLOCK_LENGTH) / 2
 ^
In file included from ultrasonic.c:15:0:
ultrasonic.h:19:0: warning: "BLOCK_EAST_EDGE" redefined
 #define BLOCK_EAST_EDGE 1
 ^
In file included from ultrasonic.c:14:0:
main.h:68:0: note: this is the location of the previous definition
 #define BLOCK_EAST_EDGE (BLOCK_WEST_EDGE + BLOCK_LENGTH)
 ^
In file included from ultrasonic.c:15:0:
ultrasonic.h:20:0: warning: "BLOCK_NORTH_EDGE" redefined
 #define BLOCK_NORTH_EDGE 2
 ^
In file included from ultrasonic.c:14:0:
main.h:69:0: note: this is the location of the previous definition
 #define BLOCK_NORTH_EDGE (BLOCK_SOUTH_EDGE + BLOCK_LENGTH)
 ^
In file included from ultrasonic.c:15:0:
ultrasonic.h:21:0: warning: "BLOCK_SOUTH_EDGE" redefined
 #define BLOCK_SOUTH_EDGE 3
 ^
In file included from ultrasonic.c:14:0:
main.h:70:0: note: this is the location of the previous definition
 #define BLOCK_SOUTH_EDGE (ARENA_LENGTH - BLOCK_LENGTH) / 2
 ^
In file included from ultrasonic.c:14:0:
main.h:27:29: error: expected identifier or '(' before numeric constant
 #define COLLISION_THRESHOLD 5 //Distance in cm from any obstacle that we should stop
                             ^
ultrasonic.c:34:18: note: in expansion of macro 'COLLISION_THRESHOLD'
 extern const int COLLISION_THRESHOLD;
                  ^
main.h:15:14: error: expected identifier or '(' before numeric constant
 #define TRUE 1
              ^
ultrasonic.c:37:20: note: in expansion of macro 'TRUE'
 extern const short TRUE;
                    ^
main.h:16:15: error: expected identifier or '(' before numeric constant
 #define FALSE 0
               ^
ultrasonic.c:38:20: note: in expansion of macro 'FALSE'
 extern const short FALSE;
                    ^
ultrasonic.c: In function 'ultrasonicInterruptHandler':
ultrasonic.c:112:27: error: '_' undeclared (first use in this function)
        puckPileLocation = _
                           ^
ultrasonic.c:112:27: note: each undeclared identifier is reported only once for each function it appears in
ultrasonic.c:113:10: error: expected ';' before '}' token
          }   
          ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 10/09/2019 14:13:34 ---------------
